# uochess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
books/: default-book.txt
scripts/: build.sh  model_xor.py  rebuild.ps1  rebuild.sh
src/: CMakeLists.txt  uo_bitboard.c  uo_book.c  uo_engine.c  uo_evaluation.c  uo_magic.c  uo_math.c  uo_misc.c  uo_move.c  uo_moves.c  uo_nn.c  uo_nn_activation_funcs.c  uo_nn_funcs.c  uo_nn_impl.cpp  uo_nn_node.c  uo_nn_value.c  uo_nntest.cpp  uo_onnx.c  uo_onnx_helper.c  uo_piece.c  uo_position.c  uo_search.c  uo_square.c  uo_tb.c  uo_test.c  uo_thread.c  uo_tuning.c  uo_uci.c  uo_util.c  uo_zobrist.c  uochess.c
src/include/: uo_bitboard.h  uo_book.h  uo_def.h  uo_engine.h  uo_evaluation.h  uo_global.h  uo_macro.h  uo_magic.h  uo_math.h  uo_misc.h  uo_move.h  uo_moves.h  uo_nn.h  uo_nn_node.h  uo_nn_value.h  uo_onnx.h  uo_onnx_helper.h  uo_piece.h  uo_position.h  uo_search.h  uo_square.h  uo_strmap.h  uo_tb.h  uo_test.h  uo_thread.h  uo_ttable.h  uo_tuning.h  uo_uci.h  uo_util.h  uo_zobrist.h
src/include/uo_nn/: uo_nntest.h
src/nn/: model_xor.json  model_xor.pt  nn-eval-test.pt  nn-test-eval.nnuo
src/nn/model_xor/: keras_metadata.pb  saved_model.pb
src/nn/model_xor/variables/: variables.data-00000-of-00001  variables.index
src/sygyzy/: tbcore.c
src/syzygy/: tbcore.c  tbcore.h
test_data/: dataset_depth_6.csv  evaluation.txt  math.txt  move_generation.txt  move_ordering.txt  nn-test-eval.nnuo  nn-test-xor.nnuo  search.txt  static_exchange_evaluation.txt  tb_probe.txt  test_positions.txt
